[package]
name = "polygon-netflow"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Config parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# API server
warp = "0.3"
tokio = { version = "1.35", features = ["full"] }

# Ethereum / Polygon client
ethers = { version = "2.0", features = ["abigen", "ws"] }

# Stream handling for async logs
tokio-stream = "0.1"

# JSON support
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Extra helpers
hex = "0.4"
